--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cloudinary": "^1.41.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
